--- a/Resources/administration/src/module/sw-settings-snippet/extension/sw-settings-index/sw-settings-index.html.twig
+++ b/Resources/administration/src/module/sw-settings-snippet/extension/sw-settings-index/sw-settings-index.html.twig
@@ -2,7 +2,7 @@
     {% parent %}
 
     {% block sw_settings_snippet_set_item %}
-        <sw-settings-item v-if="next717" label="Textbausteine" :to="{ name: 'sw.settings.snippet.set.index' }">
+        <sw-settings-item v-if="next717" label="Textbausteine" :to="{ name: 'sw.settings.snippet.index' }">
             <template slot="icon">
                 <sw-icon name="default-object-globe" size="45"></sw-icon>
             </template>
