--- a/Resources/administration/src/app/component/media/sw-media-base-item/sw-media-base-item.less
+++ b/Resources/administration/src/app/component/media/sw-media-base-item/sw-media-base-item.less
@@ -18,6 +18,7 @@
 @sw-media-base-item-color-checkmark:         @color-white;
 @sw-media-base-item-color-input-border:      @color-steam-cloud;
 @sw-media-base-item-color-input:             @color-black;
+@sw-media-base-item-preview-background:      @color-white;
 
 .sw-media-base-item {
     position: relative;
@@ -72,6 +73,10 @@
         right: @sw-media-base-item-pseudo-padding;
         visibility: hidden;
 
+        &.is--active {
+            visibility: visible;
+        }
+
         .sw-context-button__button {
             height: 16px;
             padding: 0 2px;
@@ -87,12 +92,24 @@
         }
     }
 
+    .sw-media-base-item-preview-container {
+        position: relative;
+        border: 1px solid @sw-media-base-item-color-border;
+        border-radius: @sw-media-base-item-border-radius;
+        background-color: @sw-media-base-item-preview-background;
+
+        &:after {
+            content: "";
+            display: block;
+            padding-bottom: 75%;
+        }
+    }
+
     .sw-media-base-item__name-container {
         max-width: 100%;
         margin: 15px 0 5px;
         text-align: center;
         font-size: @sw-media-base-item-small-font-size;
-        font-weight: 600;
 
         .sw-media-base-item__name {
             .truncate();
@@ -108,6 +125,7 @@
         .sw-media-base-item__name-field {
             margin: 0;
             input {
+                text-align: center;
                 color: @sw-media-base-item-color-input;
                 border: 1px solid @sw-media-base-item-color-input-border;
                 padding: 0 16px;
@@ -141,10 +159,15 @@
         border: 1px solid @sw-media-base-item-color-border;
         border-radius: @sw-media-base-item-border-radius;
 
+        .sw-media-base-item-preview-container {
+            width: 40px;
+            height: 40px;
+            grid-row:  1 / span 2;
+        }
+
         .sw-media-base-item__name-container {
             margin: 0;
             text-align: left;
-            font-weight: normal;
             font-size: @font-size-small;
         }
 
@@ -156,7 +179,6 @@
             display: block;
             margin: -5px 0 0 0;
             text-align: left;
-            font-weight: normal;
             color: @sw-media-base-item-color-metadata;
             font-size: @font-size-small;
         }
@@ -177,6 +199,20 @@
 
         .sw-media-base-item__loader {
             position: static;
+        }
+    }
+
+    &.is--selected {
+        .sw-media-base-item-preview-container {
+            border: 1px solid @sw-media-base-item-color-selected
+        }
+
+        .sw-media-base-item__name {
+            color: @sw-media-base-item-color-selected
+        }
+
+        &.is--list {
+            border: 1px solid @sw-media-base-item-color-selected;
         }
     }
 }
