--- a/Resources/administration/src/app/component/media/sw-media-media-item/sw-media-media-item.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-media-item/sw-media-media-item.html.twig
@@ -1,5 +1,5 @@
 {% block sw_media_media_item %}
-    <div class="sw-media-media-item" :class="{'is--selected': selected}">
+    <div class="sw-media-media-item">
         {% block sw_media_media_item_item %}
             <sw-media-base-item
                 ref="innerComponent"
