--- a/Resources/administration/src/module/sw-media/page/sw-media-index/sw-media-index.html.twig
+++ b/Resources/administration/src/module/sw-media/page/sw-media-index/sw-media-index.html.twig
@@ -151,47 +151,51 @@
                                             </sw-field>
                                         {% endblock %}
 
-                                        <sw-button v-if="next1207" variant="ghost" size="small" @click="createFolder">
-                                            {{ $tc('sw-media.index.buttonCreateFolder') }}
-                                        </sw-button>
+                                        {% block sw_media_index_create_folder %}
+                                            <sw-button v-if="next1207" variant="ghost" size="small" @click="createFolder">
+                                                {{ $tc('sw-media.index.buttonCreateFolder') }}
+                                            </sw-button>
+                                        {% endblock %}
                                     </div>
 
                                     <div class="sw-media-index__scroll-container"
                                          @mousedown.left="onMouseDown"
                                          ref="scrollContainer">
-                                        {% block sw_media_catalog_media_grid %}
-                                        <sw-media-grid
-                                                ref="mediaGrid"
-                                                class="sw-media-index__media-grid"
-                                                :presentation="presentation"
-                                                @sw-media-grid-selection-clear="clearSelection">
 
-                                            <template v-for="gridItem in selectableItems">
-                                                <sw-media-entity-mapper
-                                                    :item="gridItem"
-                                                    :key="gridItem.entityName + '_' + gridItem.id"
-                                                    :selected="showItemSelected(gridItem)"
-                                                    :showSelectionIndicator="isListSelect"
-                                                    :isList="false"
-                                                    @sw-media-media-item-delete="onMediaGridItemsDeleted"
-                                                    @sw-media-folder-item-delete="onMediaFoldersDeleted"
-                                                    v-on="mediaItemSelectionHandler">
-                                                </sw-media-entity-mapper>
-                                            </template>
-                                        </sw-media-grid>
+                                        {% block sw_media_catalog_media_grid %}
+                                            <sw-media-grid
+                                                    ref="mediaGrid"
+                                                    class="sw-media-index__media-grid"
+                                                    :presentation="presentation"
+                                                    @sw-media-grid-selection-clear="clearSelection">
+
+                                                {% block sw_media_index_selectable_items %}
+                                                    <sw-media-entity-mapper
+                                                        v-for="gridItem in selectableItems"
+                                                        :key="gridItem.entityName + '_' + gridItem.id"
+                                                        :item="gridItem"
+                                                        :selected="showItemSelected(gridItem)"
+                                                        :showSelectionIndicator="isListSelect"
+                                                        :isList="false"
+                                                        @sw-media-media-item-delete="onMediaGridItemsDeleted"
+                                                        @sw-media-folder-item-delete="onMediaFoldersDeleted"
+                                                        v-on="mediaItemSelectionHandler">
+                                                    </sw-media-entity-mapper>
+                                                {% endblock %}
+                                            </sw-media-grid>
                                         {% endblock %}
 
                                         {% block sw_media_index_load_more %}
-                                        <div class="sw-media-index__load-more">
-                                            <sw-loader v-if="isLoadingMore" size="30" slot="load-more"></sw-loader>
+                                            <div class="sw-media-index__load-more">
+                                                <sw-loader v-if="isLoadingMore" size="30" slot="load-more"></sw-loader>
 
-                                            <sw-button v-else-if="itemsLeft" @click="onLoadMore">
-                                                {{ $t('sw-media.index.labelLoadMore', {
-                                                        count: (itemsLeft > limit) ? limit : itemsLeft
-                                                    })
-                                                }}
-                                            </sw-button>
-                                        </div>
+                                                <sw-button v-else-if="itemsLeft" @click="onLoadMore">
+                                                    {{ $t('sw-media.index.labelLoadMore', {
+                                                            count: (itemsLeft > limit) ? limit : itemsLeft
+                                                        })
+                                                    }}
+                                                </sw-button>
+                                            </div>
                                         {% endblock %}
                                     </div>
                                 </div>
