NEXT-1207 - Make sw-media-entity-mapper completely functional

--- a/Resources/administration/src/app/component/media/sw-media-media-item/sw-media-media-item.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-media-item/sw-media-media-item.html.twig
@@ -27,7 +27,7 @@
 
                 {% block sw_media_media_item_context_menu %}
                     <template slot="media-item-context-menu">
-                        <slot name="additional-context-menu-items">
+                        <slot>
                             {% block sw_media_media_item_additional_context_menu_slot %}{% endblock %}
                         </slot>
 
