--- a/Resources/administration/src/app/component/media/sw-sidebar-media-item/sw-sidebar-media-item.html.twig
+++ b/Resources/administration/src/app/component/media/sw-sidebar-media-item/sw-sidebar-media-item.html.twig
@@ -31,7 +31,7 @@
                         @sw-media-media-item-delete="handleMediaGridItemDelete">
 
                         {% block sw_sidebar_media_item_context_items %}
-                            <slot name="context-menu-items" slot="additional-context-menu-items" :mediaItem="mediaItem"></slot>
+                            <slot name="context-menu-items" :mediaItem="mediaItem"></slot>
                         {% endblock %}
                     </sw-media-media-item>
 
