--- a/Resources/administration/src/module/sw-media/page/sw-media-index/sw-media-index.html.twig
+++ b/Resources/administration/src/module/sw-media/page/sw-media-index/sw-media-index.html.twig
@@ -180,6 +180,11 @@
                                                         @sw-media-media-item-delete="onMediaGridItemsDeleted"
                                                         @sw-media-folder-item-delete="onMediaFoldersDeleted"
                                                         v-on="mediaItemSelectionHandler">
+                                                        <template v-if="gridItem.entityName === 'media'">
+                                                            <sw-context-menu-item @click="showDetails(gridItem)">
+                                                                {{ $tc('global.sw-media-media-item.labelContextMenuDetail') }}
+                                                            </sw-context-menu-item>
+                                                        </template>
                                                     </sw-media-entity-mapper>
                                                 {% endblock %}
                                             </sw-media-grid>
